@@ -62,6 +62,7 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>${surefire.plugin.version}</version>
           <configuration>
+            <argLine>--add-opens=java.base/java.security=ALL-UNNAMED</argLine>
             <systemProperties>
               <java.util.logging.manager>org.jboss.logmanager.LogManager</java.util.logging.manager>
             </systemProperties>
